# CarMove

./: .gitignore  CMakeLists.txt  README.md
qml/: FuelRecordsPanel.qml  FuelUnloadingDisplay.qml  MainWindow.qml  MapAnimations.qml  MapDisplay.qml  MapNotifications.qml  MapTypeSelector.qml  NotificationDialog.qml  PlaybackControls.qml  SidebarPanel.qml  StatusButton.qml  StyledButton.qml  StyledComboBox.qml  TimeDisplay.qml  VehicleInfoCard.qml  VehicleMarker.qml  qml.qrc
src/: ConfigManager.cpp  ConfigManager.h  CoordinateConverter.cpp  CoordinateConverter.h  ErrorHandler.cpp  ErrorHandler.h  ExcelDataReader.cpp  ExcelDataReader.h  FolderScanner.cpp  FolderScanner.h  FuelUnloadingDataLoader.cpp  FuelUnloadingDataLoader.h  MainController.cpp  MainController.h  MapConfigManager.cpp  MapConfigManager.h  TiandituGeocoder.cpp  TiandituGeocoder.h  VehicleAnimationEngine.cpp  VehicleAnimationEngine.h  VehicleDataModel.cpp  VehicleDataModel.h  VehicleManager.cpp  VehicleManager.h  main.cpp
